[package]
name = "vapor_keeb"
version = "0.1.0"
edition = "2021"

[dependencies]
async-usb-host = { path = "./async-usb-host", features = ["defmt"] }
ch32-hal = { path = "./ch32-hal", features = [
    "defmt",
    "ch32v305rbt6",
    "embassy",
    "rt",
    "memory-x",
    "time-driver-tim1",
    "memory-x",
] }
embassy-executor = { version = "0.6.3", features = [
    "integrated-timers",
    "arch-spin",
    "executor-thread",
] }
embassy-futures = "0.1.1"

portable-atomic = { version = "1", default-features = false, features = [
    "critical-section",
] }

critical-section = { version = "1.1.3" }
embassy-time = "0.3.2"
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-usb-driver = "0.1.0"
nb = "1.1.0"

qingke-rt = "0.5.0"
qingke = "0.5.0"

panic-halt = "0.2.0"
embedded-hal-bus = "0.2.0"
defmt = "0.3"

usbd-hid = "0.8.1"
bitvec = { version = "1", default-features = false }
bitflags = "2.6.0"
embassy-sync = { version = "0.6.0", features = ["defmt"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }

usb-dfu-target = { version = "0.1", features = ["defmt"] }

[features]
usbhs = []

[patch.crates-io]
qingke = { path = "./qingke" }
qingke-rt = { path = "./qingke/qingke-rt" }

[profile.release]
debug = "full"
strip = false           # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z"         # Optimize for size.
debug-assertions = true

[profile.dev]
debug = "full"
strip = false
lto = false
overflow-checks = false
debug-assertions = true
opt-level = 2
