[package]
name = "vapor_keeb"
version = "0.1.0"
edition = "2021"

[dependencies]
async-usb-host = { path = "./async-usb-host" }
ch32-hal = { path = "./ch32-hal", features = [
    "ch32v305rbt6",
    "embassy",
    "rt",
    "memory-x",
    "time-driver-tim1",
    "memory-x",
] }
qingke-rt = "0.5.0"
qingke = "0.5.0"

embassy-executor = { version = "0.7.0", features = [
    "arch-spin",
    "executor-thread",
    # https://docs.rs/embassy-executor/latest/embassy_executor/#task-arena-size
    "task-arena-size-8192",
] }
embassy-sync = { version = "0.7.0", features = [] }
embassy-time = { version = "0.4.0", features = [] }
embassy-usb = { version = "0.3.0", features = [] }
embassy-usb-driver = "0.1.0"
embassy-futures = "0.1.1"

arrayvec = { version = "0.7.6", default-features = false }
portable-atomic = { version = "1", default-features = false, features = [
    "critical-section",
] }

critical-section = { version = "1.1.3" }
panic-halt = "0.2.0"
defmt = { version = "1.0", optional = true }

usbd-hid = "0.8.1"
bitvec = { version = "1", default-features = false }
bitflags = "1"


usb-dfu-target = { path = "./usb-dfu-target-rs" }

[features]
usbhs = []
defmt = ["dep:defmt", "embassy-executor/defmt", "embassy-usb/defmt", "embassy-time/defmt", "embassy-sync/defmt", "async-usb-host/defmt", "ch32-hal/defmt"]

[patch.crates-io]
qingke = { path = "./qingke" }
qingke-rt = { path = "./qingke/qingke-rt" }
usb-dfu-target = { path = "./usb-dfu-target-rs" }

[profile.release]
debug = "full"
strip = false           # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z"         # Optimize for size.
debug-assertions = false

[profile.dev]
debug = "full"
strip = false
lto = false
overflow-checks = false
debug-assertions = true
opt-level = 2
